story as network file push

--- a/lab/Analysis/week2--html-css-structure-analysis.html
+++ b/lab/Analysis/week2--html-css-structure-analysis.html
@@ -45,10 +45,15 @@
       <div class="grid-col-2">
         <div>
           <pre id="analysis--simplified-html">
+          body.home.blog-index div.page
           <!-- TODO: Replace with your version of a simplified structure -->
           </pre>
         </div>
         <div id="analysis--text">
+          <p>
+          <a href="https://www.ivettefelixuy.com/"> Ivette Felix Uy </a>
+          <p>This is my response</p>
+          <p>this is another response</p>
           <!-- TODO: <p>Write a response!</p> -->
         </div>
       </div>
@@ -57,7 +62,7 @@
       <h2>Questions</h2>
       <ul>
         <li>
-          <!-- TODO: Ask some questions! -->
+          ummm...<!-- TODO: Ask some questions! -->
         </li>
       </ul>
     </section>
