portfolio html change

--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
     <h1>STUDIO</h1>
     <ul>
         <li>Story Time</li>
-        <a href="index.html"><li>Stories as Networks</li></a>
+        <a href="./studio/StoriesAsNetworks/index.html"><li>Stories as Networks</li></a>
         <li>Elastic Collection</li>
         <li>New York City in Data</li>
     </ul>
