--- a/studio/project2/index.html
+++ b/studio/project2/index.html
@@ -11,26 +11,29 @@
   <script type="text/javascript" src="main.js"></script>
   <div class="fruit-calendar">
     <div class="title">Fruit Calendar</div>
-    <div class="calendar-row">
+    
+    <div class="container">
+      <div class="calendar-box">
       <a href= "january.html"><img src="imgs/1.jpg" alt="1"></a>
       <a href= "february.html"><img src="imgs/2.jpg" alt="2"></a>
-      <img src="imgs/3.jpg" alt="3">
-      <img src="imgs/4.jpg" alt="4">
-    </div>
-    <div class="calendar-row">
-      <img src="imgs/5.jpg" alt="5">
-      <img src="imgs/6.jpg" alt="6">
+      <a href= "february.html"><img src="imgs/3.jpg" alt="3"></a>
+      <a href= "february.html"><img src="imgs/4.jpg" alt="4"></a>
+    <!-- </div>
+    <div class="calendar-row"> -->
+      <a href= "february.html"><img src="imgs/5.jpg" alt="5"></a>
+      <a href= "february.html"><img src="imgs/6.jpg" alt="6"></a>
       <a href= "july.html"><img src="imgs/7.jpg" alt="7"></a>
-      <img src="imgs/8.jpg" alt="8">
+      <a href= "february.html"><img src="imgs/8.jpg" alt="8"></a>
        
-    </div>
-    <div class="calendar-row">
-      <img src="imgs/9.jpg" alt="9">
-      <img src="imgs/10.jpg" alt="10">
-      <img src="imgs/11.jpg" alt="11">
-      <img src="imgs/12.jpg" alt="12">
-   
+    <!-- </div>
+    <div class="calendar-row"> -->
+      <a href= "february.html"><img src="imgs/9.jpg" alt="9"></a>
+      <a href= "february.html"><img src="imgs/10.jpg" alt="10"></a>
+      <a href= "february.html"><img src="imgs/11.jpg" alt="11"></a>
+      <a href= "february.html"><img src="imgs/12.jpg" alt="12"></a>
     </div>
   </div>
+</div>
+
 </body>
 </html>
