--- a/studio/project2/index.html
+++ b/studio/project2/index.html
@@ -14,23 +14,23 @@
     
     <div class="container">
       <div class="calendar-box">
-      <a href= "january.html"><img src="imgs/1.jpg" alt="1"></a>
-      <a href= "february.html"><img src="imgs/2.jpg" alt="2"></a>
-      <a href= "february.html"><img src="imgs/3.jpg" alt="3"></a>
-      <a href= "february.html"><img src="imgs/4.jpg" alt="4"></a>
+      <span class="smallest"><a href= "january.html"><img src="imgs/1.png" alt="1"></a></span>
+      <span class="bigger"><a href= "february.html"><img src="imgs/2.png" alt="2"></a></span>
+      <span class="smallest"><a href= "march.html"><img src="imgs/3.png" alt="3"></a></span>
+      <span class="smaller"><a href= "april.html"><img src="imgs/4.png" alt="4"></a></span>
     <!-- </div>
     <div class="calendar-row"> -->
-      <a href= "february.html"><img src="imgs/5.jpg" alt="5"></a>
-      <a href= "february.html"><img src="imgs/6.jpg" alt="6"></a>
-      <a href= "july.html"><img src="imgs/7.jpg" alt="7"></a>
-      <a href= "february.html"><img src="imgs/8.jpg" alt="8"></a>
+      <span class="bigger"><a href= "may.html"><img src="imgs/5.png" alt="5"></a></span>
+      <span class="smaller"><a href= "june.html"><img src="imgs/6.png" alt="6"></a></span>
+      <span class="biggest"><a href= "july.html"><img src="imgs/7.png" alt="7"></a></span>
+      <span class="biggest"><a href= "august.html"><img src="imgs/8.png" alt="8"></a></span>
        
     <!-- </div>
     <div class="calendar-row"> -->
-      <a href= "february.html"><img src="imgs/9.jpg" alt="9"></a>
-      <a href= "february.html"><img src="imgs/10.jpg" alt="10"></a>
-      <a href= "february.html"><img src="imgs/11.jpg" alt="11"></a>
-      <a href= "february.html"><img src="imgs/12.jpg" alt="12"></a>
+      <span class="bigger"><a href= "september.html"><img src="imgs/9.png" alt="9"></a></span>
+      <span class="biggest"><a href= "october.html"><img src="imgs/10.png" alt="10"></a></span>
+      <span class="smallest"><a href= "november.html"><img src="imgs/11.png" alt="11"></a></span>
+      <span class="smaller"><a href= "december.html"><img src="imgs/12.png" alt="12"></a></span>
     </div>
   </div>
 </div>
