--- a/2023.html
+++ b/2023.html
@@ -4,21 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="main.css">
     <title>Seojung Park</title>
+    <link href="https://fonts.googleapis.com/css2?family=Ysabeau:ital,wght@0,300;0,400;1,200;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>LAB</h1>
-    <ul>
-        <li>Questionaire</li>
-        <li>Analysis</li>
-        <li>Poster</li>
-    </ul>
+    <div class="text">
+       <a href="https://glitch.com/edit/#!/core-2-interaction-questionnaire">Questionaire</a>
+       <br>
+       <a href="./lab/Analysis/analysis.html">Analysis</a>
+       <br>
+       <a href="./lab/Poster/index.html">Poster</a>
+       <br>
+       <a href="./lab/OuLiPo variables/poem.html">OuLiPo Variables</a>
+       <br>
+    </div>
+       <h2>Lab Exercises</h2>
+    <div class="text">
+       <a href="./lab/Exercises/week10exercise.html">Dark and Light mode</a>
+       <br>
+    </div>
+    
     <h1>STUDIO</h1>
-    <ul>
-        <li>Story Time</li>
-        <a href="./studio/StoriesAsNetworks/index.html"><li>Stories as Networks</li></a>
-        <li>Elastic Collection</li>
-        <li>New York City in Data</li>
-    </ul>
+    <div class="text">
+        <a href="./studio/Project 1 - Stories As Networks/index.html">Project 1: Stories as Networks</a>
+        <br>
+        <a href="./studio/Project 2 - Elastic Collection/index.html">Project 2: Elastic Collection</a>
+        <br>
+        Project 3: New York City in Data
+    </div>
+        <h2>Studio Exercises</h2>
+    <div class="text">
+        <a href="./studio/Exercises/Storytime/index.html">Story Time</a>
+        <br>
+        <a href="./studio/Exercises/CSS animation/index.html">CSS Animation</a>
+        <br>
+        <a href="./studio/Exercises/Coding from life/index.html">Coding from life</a>
+    </div>
 </body>
 </html>
