--- a/lab/Analysis/analysis.html
+++ b/lab/Analysis/analysis.html
@@ -45,15 +45,34 @@
       <div class="grid-col-2">
         <div>
           <pre id="analysis--simplified-html">
-          body.home.blog-index div.page
-          <!-- TODO: Replace with your version of a simplified structure -->
+          body.data-gr-ext-installed
+          &nbsp;script type.text/javascript
+          &nbsp;&nbsp;div.container
+          &nbsp;&nbsp;div.row
+          &nbsp;&nbsp;div.main-text center
+          &nbsp;&nbsp;div.logo center
+          &nbsp;&nbsp;&nbsp;img.src/logo/large@2x.png
+          &nbsp;&nbsp;&nbsp;&nbsp;h1.product designer in new york city
+          &nbsp;&nbsp;&nbsp;&nbsp;p.email/linkedin/work
+          &nbsp;&nbsp;div.::after
+          &nbsp;&nbsp;div.logo center
+          &nbsp;&nbsp;div.main-text center
+          &nbsp;&nbsp;div.row
+          &nbsp;&nbsp;div.container
+          &nbsp;script type.text/javascript
           </pre>
         </div>
         <div id="analysis--text">
           <p>
           <a href="https://www.ivettefelixuy.com/"> Ivette Felix Uy </a>
-          <p>This is my response</p>
-          <p>this is another response</p>
+          <p></p>
+          <p>Apply JavaScript
+            <br><br>Divide the container and row and center the logo
+            <br><br>Apply the image as src and center it as mentioned above
+            <br><br>Divide into h1 and p, place the title in the center and place the small elements under it
+            <br><br>I couldn't figure out what ::after is, but what I looked for was "The ::after selector inserts something after the content of each selected element(s)".
+            <br><br>Close the rest of the divisor
+          </p>
           <!-- TODO: <p>Write a response!</p> -->
         </div>
       </div>
@@ -62,7 +81,7 @@
       <h2>Questions</h2>
       <ul>
         <li>
-          ummm...<!-- TODO: Ask some questions! -->
+          What is "::after"?
         </li>
       </ul>
     </section>
