--- a/2023.html
+++ b/2023.html
@@ -41,6 +41,8 @@
         <a href="./studio/Exercises/CSS animation/index.html">CSS Animation</a>
         <br>
         <a href="./studio/Exercises/Coding from life/index.html">Coding from life</a>
+        <br>
+        <a href="./studio/Exercises/Case study/Case study exercise.html">Coding from life</a>
     </div>
 </body>
 </html>
