--- a/2023.html
+++ b/2023.html
@@ -42,7 +42,7 @@
         <br>
         <a href="./studio/Exercises/Coding from life/index.html">Coding from life</a>
         <br>
-        <a href="./studio/Exercises/Case study/Case study exercise.html">Coding from life</a>
+        <a href="./studio/Exercises/Case study/Case study exercise.html">Case Study</a>
     </div>
 </body>
 </html>
