Update Case study exercise.html

--- a/studio/Exercises/Case study/Case study exercise.html
+++ b/studio/Exercises/Case study/Case study exercise.html
@@ -29,5 +29,8 @@
     <p>The collection is organized from the 1960s to 2010, and pressing a year brings up <br><br>
         an interaction that shows the videotapes included in that year.</p>
 
+<br>
+<p><a href="./studio/Exercises/Case study/Case study exercise.html">Check out the website!</a></p>
+
 </body>
 </html>
