Update Case study exercise.html

--- a/studio/Exercises/Case study/Case study exercise.html
+++ b/studio/Exercises/Case study/Case study exercise.html
@@ -30,7 +30,7 @@
         an interaction that shows the videotapes included in that year.</p>
 
 <br>
-<p><a href="./studio/Exercises/Case study/Case study exercise.html">Check out the website!</a></p>
+<p><a href="https://jiyeonjungart.github.io/jiyeon_cis23/studio/projects/elasticCollection/index.html">Check out the website!</a></p>
 
 </body>
 </html>
