--- a/2023.html
+++ b/2023.html
@@ -32,7 +32,7 @@
         <br>
         <a href="./studio/Project 2 - Elastic Collection/index.html">Project 2: Elastic Collection</a>
         <br>
-        <a href="studio/Project 3 - NYC Data/NYC Data.html">New York City in Data</a>
+        <a href="studio/Project 3 - NYC Data/NYC Data.html">Project 3: New York City in Data</a>
     </div>
         <h2>Studio Exercises</h2>
     <div class="text">
